cmake_minimum_required(VERSION 2.8)
project(Flame)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
set(SOURCE_FILES dstar.c)
add_executable(dstar ${SOURCE_FILES})
target_link_libraries(dstar LINK_PUBLIC Argsx)
target_link_libraries(dstar LINK_PUBLIC NetdHelper)
target_link_libraries(dstar LINK_PUBLIC IpHelper)
target_link_libraries(dstar LINK_PUBLIC DhcpHelper)
target_link_libraries(dstar LINK_PUBLIC UdpHelper)
